# MyECS

./: CMakeLists.txt  main.cpp
Code/includes/: ComponentPool.h  Components.h  EntityManager.h  PhysicsSystem.h  Scene.h  SystemBase.h
Code/src/: ComponentPool.cpp  Components.cpp  EntityManager.cpp  PhysicsSystem.cpp  Scene.cpp
